Enhance security configuration:
- Limit session concurrency to a single session per user.
- Update CORS configuration for broader localhost patterns, exposed headers, and max age.
- Add secure session cookie properties to application.properties.